@@ -169,6 +169,7 @@ class ConsoleView(gtk.TextView):
         self.text_buffer.create_mark('line_start', 
                                      self.text_buffer.get_end_iter(), True)
     self.connect('key-press-event', self._onKeypress)
+    self.text_buffer.connect('notify::cursor-position', self._onCursorMove)
     self.last_cursor_pos = 0
     
   def write(self, text, editable=False):
@@ -222,20 +223,35 @@ class ConsoleView(gtk.TextView):
     self.text_buffer.move_mark(self.line_start,self.text_buffer.get_end_iter())
     self.text_buffer.place_cursor(self.text_buffer.get_end_iter())
 
+  def _onCursorMove(self, text_buffer, param_spec):
+    insert_mark = self.text_buffer.get_insert()
+    insert_iter = self.text_buffer.get_iter_at_mark(insert_mark)
+    start_iter = self.text_buffer.get_iter_at_mark(self.line_start)
+    if start_iter.compare(insert_iter) < 0:
+      self.line_start.set_visible(False)
+      self.set_cursor_visible(True)
+    else:
+      self.line_start.set_visible(True)
+      self.set_cursor_visible(False)
 
   def _onKeypress(self, obj, event):
     if not event.string:
       return
-    cursor_offset = self.text_buffer.get_property('cursor-position')
-    if cursor_offset == self.last_cursor_pos:
-      return
+    insert_mark = self.text_buffer.get_insert()
+    insert_iter = self.text_buffer.get_iter_at_mark(insert_mark)
+    selection_mark = self.text_buffer.get_selection_bound()
+    selection_iter = self.text_buffer.get_iter_at_mark(selection_mark)
     start_iter = self.text_buffer.get_iter_at_mark(self.line_start)
-    if cursor_offset < start_iter.get_offset():
-      insert_mark = self.text_buffer.get_insert()
+    if start_iter.compare(insert_iter) <= 0 and \
+          start_iter.compare(selection_iter) <= 0:
+      return
+    elif insert_iter.compare(selection_iter) < 0:
       self.text_buffer.move_mark(insert_mark, start_iter)
+    elif insert_iter.compare(selection_iter) > 0:
+      self.text_buffer.move_mark(selection_mark, start_iter)
     else:
-      self.last_cursor_pos = cursor_offset
-     
+      self.text_buffer.place_cursor(start_iter)
+             
 
 class IPythonView(ConsoleView, IterableIPShell):
   def __init__(self):
