@@ -1,3 +1,7 @@
+2007-04-19  Eitan Isaacson  <eitan@ascender.com>
+
+	* plugins/ipython_view.py: Fixed more selection quirks.
+
 2007-04-17  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/interface_view.py: Fixed syntax error. 
